# appfab

./: README.md  io.github.kolunmi.AppFab.json  meson.build
data/: io.github.kolunmi.AppFab.desktop.in  io.github.kolunmi.AppFab.gschema.xml  io.github.kolunmi.AppFab.metainfo.xml.in  io.github.kolunmi.AppFab.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: af-application.c  af-application.h  af-window.blp  af-window.c  af-window.h  appfab.gresource.xml  main.c  meson.build
